oauth2-proxy/deployment.yaml
# https://github.com/kubernetes/ingress-nginx/tree/master/docs/examples/auth/oauth-external-auth
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/pusher/oauth2_proxy:v5.1.0
        args:
        - --provider=google
        - --whitelist-domain=.lukeaddison.co.uk
        - --cookie-domain=.lukeaddison.co.uk
        - --authenticated-emails-file=/etc/oauth2-proxy/authenticated-emails.txt
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        ports:
        - containerPort: 4180
          protocol: TCP
        readinessProbe:
          periodSeconds: 3
          httpGet:
            path: /ping
            port: 4180
        volumeMounts:
        - name: authenticated-emails
          mountPath: /etc/oauth2-proxy
      volumes:
      - name: authenticated-emails
        secret:
          secretName: oauth2-proxy
          items:
          - key: authenticated-emails.txt
            path: authenticated-emails.txt
