oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: oauth2-tls
    hosts:
    - oauth2.lukeaddison.co.uk
  rules:
  - host: oauth2.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
